--- a/package.json
+++ b/package.json
@@ -31,10 +31,16 @@
     "react-app-polyfill": "^1.0.6",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.20",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.13.1",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-saga": "^1.1.3",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
