--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
+    "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
