--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-gauge-chart": "^0.2.5",
     "react-google-login": "^5.1.20",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
