--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.8",
+    "@rjsf/core": "^2.0.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
@@ -33,6 +34,8 @@
     "react-dom": "^16.13.1",
     "react-gauge-chart": "^0.2.5",
     "react-google-login": "^5.1.20",
+    "react-json-tree": "^0.11.2",
+    "react-json-view": "^1.19.1",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
@@ -46,6 +49,7 @@
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
+    "json-schema-generator": "^2.0.6",
     "react-scripts": "^3.4.1"
   },
   "scripts": {
