--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-gauge-chart": "^0.2.5",
     "react-google-login": "^5.1.20",
@@ -46,7 +47,8 @@
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
     "redux-saga": "^1.1.3",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "json-schema-generator": "^2.0.6",
