--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "copyright": "Copyright 2017-2019 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
-  },
+  "repository": "git@github.com:coreui/coreui-free-react-admin-template.git",
   "dependencies": {
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
@@ -24,6 +21,7 @@
     "core-js": "^3.6.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "express": "^4.17.1",
     "flag-icon-css": "^3.4.6",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.14.1",
@@ -85,5 +83,6 @@
   "engines": {
     "node": ">=8.10",
     "npm": ">=6"
-  }
+  },
+  "main": "index.js"
 }
